--- a/blog.html
+++ b/blog.html
@@ -17,11 +17,11 @@
 			<li><a href="#">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<main>
-			<h1>about me</h1>
+			<h1>my blog</h1>
 			<p>blah, blah, blah...</p>
 		</main>
 		<footer>
