--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 		</ul>
 		</header>
 		<main>
-			<h1>my blog...</h1>
+			<h1>my blog.......</h1>
 			<p>blah, blah, blah...</p>
 		</main>
 		<footer>
