--- a/cultural analysis.html
+++ b/cultural analysis.html
@@ -12,8 +12,13 @@
 		<h1>my portfolio</h1>
 		<ul id="nav">
 			<li><a href="index.html">home</a></li>
+ 	<p>The purpose of this video is try to let people understand and accept homosexuality. As the same as other people, they love their life, friends, and families. The only difference is they have different sexual orientation than other people. </p>
+	<p>The man who is a guy use his own store to explain his life experiences about homosexuality and this can help people understand well about this specific group.</p>
+        <p>the structure of the message is first come with some letters and pictures that include all the main points the author want to explain, then the author is come up and make a bravely explanation about his own store.</p> 
+        <p> This video's structure help me found that when I write my lived experience project I should first come with an outline, like how my major is. Then, use my own store explain why I interested in this major and how my store related with that major which I chose.</p>  
+
 			<li><a href="lived.html">lived <br />experiences</a></li>
-			<li><a href="#">cultural <br />analysis</a></li>
+			<li><a href="cultural analysis.html">cultural <br />analysis</a></li>
 			<li><a href="#">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
