--- a/cultural4.html
+++ b/cultural4.html
@@ -32,8 +32,8 @@
 			</ul>
 		</div>
 		<article>
-			<h1>Executive Summary</h1>
-			<p>Executive Summary goes here</p>
+			<h1>Description of Issue</h1>
+			<p>Description of Issue goes here</p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
