--- a/cultural3.html
+++ b/cultural3.html
@@ -32,8 +32,8 @@
 			</ul>
 		</div>
 		<article>
-			<h1>Executive Summary</h1>
-			<p>Executive Summary goes here</p>
+			<h1>Analysis of Artifact</h1>
+			<p>Analysis of Artifact goes here</p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
