--- a/cultural6.html
+++ b/cultural6.html
@@ -32,8 +32,8 @@
 			</ul>
 		</div>
 		<article>
-			<h1>Executive Summary</h1>
-			<p>Executive Summary goes here</p>
+			<h1>Anticipated Effects</h1>
+			<p>Anticipated Effects go here</p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
