--- a/cultural.html
+++ b/cultural.html
@@ -17,7 +17,7 @@
 			<li><a href="#">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
@@ -36,7 +36,7 @@
 			<p>Executive Summary goes here</p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p> &copy; 2013 [Name goes here]</p>
 		</footer>
 	</content>
 </body>	
