--- a/cultural.html
+++ b/cultural.html
@@ -33,10 +33,12 @@
 		</div>
 		<article>
 			<h1>Executive Summary</h1>
-			<p>Executive Summary goes here</p>
+			<p>Lots of <p>  Chinese people now spend lots of money on over packaged and high priced moon cakes as gifts to send to their friends, colleagues, supervisors, and bosses. My culture artifact, these more expensive moon cakes, increases environmental pollution and creates bribery. The general moon cake boxes materials include wrapping papers, plastics, metals, which may cause environmental pollution. High priced moon cakes being given as gifts will be used as bribery. </p>
+ <p> In this paper, I am going to introduce why my cultural artifact-moon cakes is important to our culture, what are social issues caused by moon cakes consumer these few years, and how to regulate and solve these issues.  
+</p>
 		</article>
 		<footer>
-		<p> &copy; 2013 [Name goes here]</p>
+		<p> &copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
