--- a/cultural2.html
+++ b/cultural2.html
@@ -33,10 +33,10 @@
 		</div>
 		<article>
 			<h1>Introduction</h1>
-			<p>Introduction goes here</p>
+			<p>The Mid-Autumn Festival is one of the four most important Chinese festivals.  Mid-Autumn Festival in China is the symbol of the yearly reunion of family members, which express the best wishes to our family members. During the Mid-Autumn Festival, typically, people eat moon cakes, which are traditional Chinese bakery products.  Moon cakes are offered between friends or on family gatherings while celebrating the festival.  That is why for the traditional Mid-Autumn Festival celebration, people will choose moon cakes as the best gift to send to their family members and friends. But so many Chinese people now spend lots of money on over packaged and high priced moon cakes as gifts to send to their friends, colleagues, supervisors, and bosses. My culture artifact, these more expensive moon cakes, increases environmental pollution and creates bribery. The general moon cake boxes materials include wrapping papers, plastics, metals, which may cause environmental pollution. High priced moon cakes being given as gifts will be used as bribery. </p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
