--- a/cultural3.html
+++ b/cultural3.html
@@ -33,10 +33,10 @@
 		</div>
 		<article>
 			<h1>Analysis of Artifact</h1>
-			<p>Analysis of Artifact goes here</p>
+			<p>Moon cakes are considered a delicate artifact in China. For the traditional Chinese Mid-Autumn Festival, before Mid-Autumn day we make moon cakes with family members at home.  Most moon cakes consist of a thin, tender pastry skin enveloping a sweet, dense filling, and may contain one or more whole salted egg yolks in their center as the symbol of the full moon. Traditional moon cakes have an imprint on top consisting of the Chinese characters for "longevity" or "harmony," as well as the name of the bakery and the filling inside (Wikipedia. 2013). Traditional hand- made moon cakes take up to 3 to 7 days to make, but new technology has sped up the process considerably. Today, moon cakes may be filled with everything from dates, nuts, and fruit to Chinese sausages. More exotic creations include green tea moon cakes. Moon cakes are found everywhere in China and are even sold in McDonald's and Starbucks. Haagen-Daz has even gotten into the act by introducing a line of ice cream moon cakes in Asian markets.</p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
