--- a/cultural5.html
+++ b/cultural5.html
@@ -33,10 +33,10 @@
 		</div>
 		<article>
 			<h1>Proposed Solution</h1>
-			<p>Proposed Solution goes here</p>
+			<p>In the past two or three years, More and more people become aware of the gravity of the issue of chose luxurious moon cakes as gift to send to other people. And try to find some way to regulate this undesired social behavior. For the last two years, I joined in the Chinese voluntary agents. Our job is focus on propagating information about decreasing the use of luxurious boxes to over package moon cakes in order to reduce the environmental pollution, and reject receiving high priced moon cakes in order to reject bribery. We wish more and more people can aware of high price of gift giving behavior will bring some serious problems to our society, and more and more people can reject this behavior. </p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
