--- a/cultural6.html
+++ b/cultural6.html
@@ -33,10 +33,10 @@
 		</div>
 		<article>
 			<h1>Anticipated Effects</h1>
-			<p>Anticipated Effects go here</p>
+			<p>The fact is that our efforts has already been received some important goals.  This year, Chinese president Xi banned from buying moon cakes with public funds. This means the public companies and government departments never can spend public money to buy moon cakes as gifts use for commercial purposes again. Also, this year most of government officials are less willing to accept high-priced moon cakes. For some cities, government officials cannot receive any moon cakes. That is reduced the high priced moon cakes demand, and decreased a large percentage of environmental pollution and bribery cases. But that is just for public companies and officials, we need more work to help more people understanding how important if we can buy less over packaged and high priced moon cakes.   </p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
