--- a/cultural7.html
+++ b/cultural7.html
@@ -33,10 +33,12 @@
 		</div>
 		<article>
 			<h1>Conclusion</h1>
-			<p>Conclusion goes here</p>
+			<p> I believe the moon cake is just a symbol of yearly reunion for Chinese family members, so no matter you get the cheap or expensive moon cakes to other people; they both can express your best wishes. We should focus more on the meaning of Mid-autumn Festival which is celebrating and gathering with your friends and family members, not send the expensive gifts to other people. All of this we can summed up in one sentence, high priced over packaged moon cakes, no, but should be appropriate gifts, like general traditional moon cakes plus your hand- made gift card with some sentences can express your best wishes. I hope everyone can enjoy in health and environmental friendly Mid-Autumn festival in the future. 
+
+</p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
