--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		</ul>
 		</header>
 		<main>
-			<h1>about me</h1>
+			<img src="http://www.geekpics.net/images/2013/12/07/SuLcJIw.jpg" style="max-width:100%" alt="My Picture" />
+                        <h1>about me</h1>
 			<p>blah, blah, blah...</p>
 		</main>
 		<footer>
