--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</header>
 		<main>
 			<img src="http://www.geekpics.net/images/2013/12/07/SuLcJIw.jpg" style="max-width:40%" alt="My Picture" />
-                        <h1>about me</h1>
-			<p>blah, blah, blah...</p>
+                        <h1>Hi, I am Yuhui, welcome to my web page</h1>
+			<p>This is my third year in MSU, and I am junior Finance major student</p>
 		</main>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
