--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>This is my third year in MSU, and I am junior Finance major student</p>
 		</main>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
