--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<main>
 			<img src="http://www.geekpics.net/images/2013/12/07/SuLcJIw.jpg" style="max-width:40%" alt="My Picture" />
                         <h1>Hi, I am Yuhui, welcome to my web page</h1>
-			<p>This is my third year in MSU, and I am junior Finance major student</p>
+			<p>This is my third year in MSU, and I am junior Finance major student.I like swimming and running.</p>
+<p>I come from China, and I think Chinese foods are very nice.</p>
+<p>If you want know more about me, just feel free to search my web page.</p>
 		</main>
 		<footer>
 		<p>&copy; 2013 [YUHUI SUN]</p>
