--- a/blog.html
+++ b/blog.html
@@ -22,11 +22,25 @@
 		</header>
 		<main>
 			<h1>my blog.......</h1>
-			<p>Sep.19   in class discussion about understanding homosexuality 
+			<p>In class activity1:   in class discussion about understanding homosexuality 
 	<p>The purpose of this video is try to let people understand and accept homosexuality. As the same as other people, they love their life, friends, and families. The only difference is they have different sexual orientation than other people. </p>
 	<p>The man who is a guy use his own store to explain his life experiences about homosexuality and this can help people understand well about this specific group.</p>
         <p>the structure of the message is first come with some letters and pictures that include all the main points the author want to explain, then the author is come up and make a bravely explanation about his own store.</p> 
-        <p>This video's structure help me found that when I write my lived experience project I should first come with an outline, like how my major is. Then, use my own store explain why I interested in this major and how my store related with that major which I chose.</p>  
+        <p>This video's structure help me found that when I write my lived experience project I should first come with an outline, like how my major is. Then, use my own store explain why I interested in this major and how my store related with that major which I chose.</p> 
+<p>In class activity 2:   Today¡¯s class, we watched the video about Mark Zuckerberg.  He creates the face book which is the top one social network. Face book is very popular in the modern world, almost all of college students use face book. Everyone try to find an easy way to talk and get in touch with their friends and families. Face book did it, because it is very convenience and totally free. We can say mark changed our world, and face book is really amazing in our generation.</p> 
+
+<p>In class activity 3:    Today¡¯s class, we watched some videos about advertisements. Great advertisement can help customers understand the key point much better.  Usually, the good strategy to make a video is use appropriate color and background information. The most famous company in Detroit is ford. Ford made lots of popular cars. So the author used Eminem¡¯s song to be the background music. Top singer plus famous car company, then, we can see a great advertisement. 
+Additional blogs</p>
+<p>Blog 1: lived experience project. This project lets students writing a narrative detailing how a specific technology helped them choosing their majors.  In my paper, I wrote about how computer science programming impacted my choice of major in business and focus on information system. That is the first project we did in this semester, hopeful it will be a great beginning. </p>
+<p>Blog2: cultural analysis proposal. This project lets us analysis a specific cultural artifact, and how this artifact related with social issues. Also, we need give some suggestion about how to solve those social issues. In this paper, I introduced how the moon-cakes are an important artifact in Chinese cultural, and how moon-cakes caused some social issues in our culture. I did not do well in my first assignment, so I spend lot of time on this one. This is a very interesting topic.</p>
+<p>Blog3: formal research proposal. This project helped us deeply thought more about the major we chose, and detailed introduce that discipline we are interested in. This project helped us begin to know how to use MSU library research tools. We also need to complete an interview with one of the academic professor who is familiar with the discipline which we chose.</p>  
+<p>Blog 4: remix project. The last assignment we did is the remix project, and this project is a group work. The first part of this project is we need to create a video which should be 7-9 minutes long. The second part of this project is writing a memo for the video which we created, and that is for individual work. This project is very challenge for me because I am really not good at computer side. So, I need learn how to make video on line. Hopeful I can find someone for help. </p>
+<p>Blog 5: how to use MSU library search. MSU has lots of free magazines, news papers, articles, and books for students. After the assignment, we start to use this power search tool. It can give us lots of reliable information, but we need to know how to narrow down those information.</p> 
+<p>Blog 6: work with group, remix project. This night, we spend whole night at main library to work on our remix video and worksheet. At the beginning, we thought this is very complex, but then we begin to love it. Work with other is a very nice thing. I really enjoy stay with my group members.</p>
+<p>Blog 7: interview my professor. I did interview with my professor this late afternoon. I feeling a bit nervous about talk with her, but she is very nice. She introduced some new technologies in finance area and gave some academic suggestion for my future classes. That makes me feel very happy.</p> 
+<p>Blog 8: Final paper. This project helped me thought more about this class and this semester. I got lots of information and knowledge from this course. Hopeful the incoming students can get some useful suggestion through my paper and will like this class. </p>
+<p>Blog 9: Now is the final week, I already getting almost everything done for this class.  I wish I can do well all of my other final exams.</p>  
+ 
        
 
 		</main>
