--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@ Additional blogs</p>
 
 		</main>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [YUHUI SUN]</p>
 		</footer>
 	</content>
 </body>	
